--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,10 +51,11 @@ jobs:
           command: | 
             rm -r gcp-serverless/public/*
             mv build/* gcp-serverless/public
-            cd gcp-serverless
       - run:
           name: Deploy to Firebase
-          command: ../node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+          command: |
+            cd gcp-serverless
+            ../node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
   
 
 
