--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,8 @@ jobs:
       - run:
           name: Deploy to Firebase
           command: |
-            node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+            cd firebase-hosting
+            ../node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
   
 
 workflows:
