--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,19 +29,17 @@ jobs:
           command: |
             npm run test
       - persist_to_workspace:
-          root: build
-          paths: ./*
+          root: ./
+          paths:
+            - build/*
+            - server/*
 
   deploy-til-dev:
-    docker:
-      - image: circleci/node:11.7.0
-
     steps:
-      - checkout
       - setup_remote_docker
       - sett-miljovariabler
       - attach_workspace:
-          at: build/
+          at: ./
       - run:
           name: Bygger Docker image
           command: docker build -t "$DOCKER_IMAGE_VERSIONED" .
@@ -73,11 +71,7 @@ jobs:
                 https://api.github.com/repos/navikt/personopplysninger/deployments
 
   deploy-til-prod:
-    docker:
-      - image: circleci/node:10
-
     steps:
-      - checkout
       - sett-miljovariabler
       - run:
           name: Deployer til prod
