Legg til DockerFile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
           paths:
             - build/*
             - server/*
+            - ./Dockerfile
 
   deploy-til-dev:
     docker:
