--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,17 +31,18 @@ jobs:
       - persist_to_workspace:
           root: ./
           paths:
-            - ./*
+            - build/*
 
   deploy-til-dev:
     docker:
       - image: circleci/node:11.7.0
 
     steps:
+      - checkout
       - setup_remote_docker
       - sett-miljovariabler
       - attach_workspace:
-          at: ./
+          at: build/
       - run:
           name: Bygger Docker image
           command: docker build -t "$DOCKER_IMAGE_VERSIONED" .
@@ -77,6 +78,7 @@ jobs:
       - image: circleci/node:11.7.0
 
     steps:
+      - checkout
       - sett-miljovariabler
       - run:
           name: Deployer til prod
