Tweak bekreft-deploy-til-prod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,14 +142,7 @@ workflows:
             tags:
               only: /^v.*/
             branches:
-              only:
-                - master
+              ignore: /.*/
       - deploy-til-prod:
           requires:
             - bekreft-deploy-til-prod
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              only:
-                - master
