--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,12 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2.1
 jobs:
-  build:
+  build-react-app:
     docker:
-      - image: circleci/node:10
-
+      - image: circleci/node:11.7.0
     steps:
       - checkout
       - restore_cache:
           keys:
-            # when lock file changes, use increasingly general patterns to restore cache
             - node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
             - node-v1-{{ .Branch }}-
             - node-v1-
@@ -22,21 +16,26 @@ jobs:
             npm ci && npm run build
       - save_cache:
           paths:
-            - ~/usr/local/lib/node_modules # location depends on npm version
+            - ~/usr/local/lib/node_modules
           key: node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
       - run:
           name: Tester
           command: |
             npm run test
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - build/*
 
   deploy-til-dev:
     docker:
-      - image: circleci/node:10
-
+      - image: circleci/node:11.7.0
     steps:
       - checkout
-      - setup_remote_docker
       - sett-miljovariabler
+      - setup_remote_docker
+      - attach_workspace:
+          at: build/
       - run:
           name: Bygger Docker image
           command: docker build -t "$DOCKER_IMAGE_VERSIONED" .
@@ -69,10 +68,8 @@ jobs:
 
   deploy-til-prod:
     docker:
-      - image: circleci/node:10
-
+      - image: circleci/node:11.7.0
     steps:
-      - checkout
       - sett-miljovariabler
       - run:
           name: Deployer til prod
@@ -109,43 +106,38 @@ commands:
             echo 'export DOCKER_IMAGE_VERSIONED="$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$BRANCH_PREFIX$RELEASE_VERSION"' >> $BASH_ENV
 
 workflows:
-  bygg_og_deploy:
+  bygg-og-deploy:
     jobs:
-      - build
-      - deploy-til-dev:
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - master
-      - deploy-til-dev-manuelt:
+      - build-react-app
+      - bekreft-deploy-til-dev:
           type: approval
           requires:
-            - build
+            - build-react-app
           filters:
             branches:
               ignore:
                 - master
       - deploy-til-dev:
+          name: automatisk-deploy-til-dev
           requires:
-            - deploy-til-dev-manuelt
-      - godkjenn-til-prod:
+            - build-react-app
+          filters:
+            branches:
+              only:
+                - master
+      - deploy-til-dev:
+          name: manuell-deploy-til-dev
+          requires:
+            - bekreft-deploy-til-dev
+      - bekreft-deploy-til-prod:
           type: approval
           requires:
-            - build
+            - automatisk-deploy-til-dev
           filters:
             tags:
               only: /^v.*/
             branches:
-              only:
-                - master
+              ignore: /.*/
       - deploy-til-prod:
           requires:
-            - godkjenn-til-prod
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              only:
-                - master
+            - bekreft-deploy-til-prod
