--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: |
             npm run test
       - persist_to_workspace:
-          root: ./
+          root: .
           paths:
             - build/*
 
@@ -35,7 +35,7 @@ jobs:
       - sett-miljovariabler
       - setup_remote_docker
       - attach_workspace:
-          at: build/
+          at: .
       - run:
           name: Bygger Docker image
           command: docker build -t "$DOCKER_IMAGE_VERSIONED" .
