--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,9 +122,10 @@ workflows:
           requires:
             - build-react-app
           filters:
+            tags:
+              only: /^v.*/
             branches:
-              only:
-                - master
+              ignore: /.*/
       - deploy-til-dev:
           name: manuell-deploy-til-dev
           requires:
@@ -134,10 +135,8 @@ workflows:
           requires:
             - automatisk-deploy-til-dev
           filters:
-            tags:
-              only: /^v.*/
             branches:
-              ignore: /.*/
+              only: master
       - deploy-til-prod:
           requires:
             - bekreft-deploy-til-prod
