--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,14 +109,16 @@ workflows:
   bygg-og-deploy:
     jobs:
       - build-react-app
+          filters:
+            tags:
+              only: /.*/
       - bekreft-deploy-til-dev:
           type: approval
           requires:
             - build-react-app
           filters:
             branches:
-              ignore:
-                - master
+              ignore: master
       - deploy-til-dev:
           name: automatisk-deploy-til-dev
           requires:
@@ -125,7 +127,7 @@ workflows:
             tags:
               only: /^v.*/
             branches:
-              ignore: /.*/
+              only: master
       - deploy-til-dev:
           name: manuell-deploy-til-dev
           requires:
