--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,8 @@ workflows:
             - build-react-app
           filters:
             branches:
-              ignore: master
+              ignore:
+                - master
       - deploy-til-dev:
           name: automatisk-deploy-til-dev
           requires:
@@ -127,7 +128,8 @@ workflows:
             tags:
               only: /^v.*/
             branches:
-              only: master
+              only:
+                - master
       - deploy-til-dev:
           name: manuell-deploy-til-dev
           requires:
@@ -138,7 +140,8 @@ workflows:
             - automatisk-deploy-til-dev
           filters:
             branches:
-              only: master
+              only:
+                - master
       - deploy-til-prod:
           requires:
             - bekreft-deploy-til-prod
