Legg inn checkout i deploy-til-prod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ jobs:
     docker:
       - image: circleci/node:11.7.0
     steps:
+      - checkout
       - sett-miljovariabler
       - run:
           name: Deployer til prod
