--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: Installer npm pakker
           command: |
-            npm install
+            npm ci
       - save_cache:
           key: node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
@@ -154,4 +154,3 @@ workflows:
               only: /^v.*/
             branches:
               ignore: /.*/
-
