--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,9 @@ jobs:
           command: |
               mkdir "$CIRCLE_TAG"
               mv build/* $CIRCLE_TAG/
-              mkdir src
-              mv $CIRCLE_TAG src/
-              az storage blob upload-batch -d sc-personopplysninger/$CIRCLE_TAG --account-name sapersonopplysninger -s src
+              mkdir src_folder
+              mv $CIRCLE_TAG src_folder/
+              az storage blob upload-batch -d sc-personopplysninger/$CIRCLE_TAG --account-name sapersonopplysninger -s src_folder
   
 
 workflows:
