--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,7 @@ jobs:
       - run:
           name: deploy to Azure container
           command: |
-              mkdir "$CIRCLE_TAG"
-              mv build/* $CIRCLE_TAG/
-              mkdir src_folder
-              mv $CIRCLE_TAG src_folder/
-              az storage blob upload-batch -d sc-personopplysninger/$CIRCLE_TAG --account-name sapersonopplysninger -s src_folder/
+              az storage blob upload-batch -d sc-personopplysninger/$CIRCLE_TAG --account-name sapersonopplysninger -s build/
   
 
 workflows:
