--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,14 @@ jobs:
           name: deploy to Azure container
           command: |
               az storage blob upload-batch -d sc-personopplysninger/$CIRCLE_TAG --account-name sapersonopplysninger -s build/
+      - run:
+          name: Purge CDN
+          command: | 
+              az cdn endpoint purge -g rg-personopplysninger -n personopplysninger-q --profile-name cdn-personopplysninger --content-paths /*
+              az cdn endpoint purge -g rg-personopplysninger -n personopplysninger-function --profile-name cdn-personopplysninger --content-paths /*
+      - run:
+          name: Upload index.html
+          command: az storage blob upload -d sc-personopplysninger --account-name sapersonopplysninger -s build/index.html
   
 
 workflows:
