--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,25 @@ jobs:
       - run:
           name: Upload index.html
           command: az storage blob upload -c sc-personopplysninger -f build/index.html -n index.html --account-name sapersonopplysninger
+
+  purge-cdn:
+    docker:
+      - image: circleci/python:3.7.3
+    steps:
+      - checkout
+      - attach_workspace:
+          at: build/
+      - run: 
+          name: Install and authenticate az cli
+          command: |
+              curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+              az login --service-principal -u bb1f59d6-e80f-4e18-96cf-6813b13ed22c -p $AZURE_CLIENT_SECRET --tenant 966ac572-f5b7-4bbe-aa88-c76419c0f851
+      - run:
+          name: purge cdn
+          command: |
+              az cdn endpoint purge -g rg-personopplysninger -n personopplysninger-q --profile-name cdn-personopplysninger --content-paths /*
+              az cdn endpoint purge -g rg-personopplysninger -n personopplysninger-function --profile-name cdn-personopplysninger --content-paths /*
+
   
 
 workflows:
@@ -65,3 +84,6 @@ workflows:
               only: /^v.*/
             branches:
               ignore: /.*/
+      - purge-cdn:
+          requires:
+            - deploy-til-dev
