--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
           name: purge cdn
           command: |
               az cdn endpoint purge -g rg-personopplysninger -n personopplysninger-q --profile-name cdn-personopplysninger --content-paths /index.html
-              az cdn endpoint purge -g rg-personopplysninger -n personopplysninger-function --profile-name cdn-personopplysninger --content-paths /api/dekorator
+              #az cdn endpoint purge -g rg-personopplysninger -n personopplysninger-function --profile-name cdn-personopplysninger --content-paths /api/dekorator
 
 workflows:
   bygg-og-deploy:
@@ -94,7 +94,6 @@ workflows:
           name: deploy-til-dev
           requires:
             - bekreft-deploy
-            
-      # - purge-cdn:
-      #     requires:
-      #       - deploy-til-dev
+      - purge-cdn:
+          requires:
+            - deploy-til-dev
