--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ commands:
           name: Setter miljøvariabler
           command: |
             echo "export COMMIT_SHORT='$(git rev-parse --short HEAD)'" >> $BASH_ENV
-            echo "export DOCKER_IMAGE_VERSIONED='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_BUILD_NUM-${CIRCLE_BRANCH////-}'" >> $BASH_ENV
+            echo "export DOCKER_IMAGE_VERSIONED='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_BUILD_NUM-${CIRCLE_BRANCH////-}${CIRCLE_TAG}'" >> $BASH_ENV
 
 workflows:
   bygg-og-deploy:
