--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,9 @@ jobs:
           at: .
       - run:
           name: Bygger Docker image
-          command: docker build -t "$DOCKER_IMAGE_NAME" .
+          command: |
+            echo $DOCKER_IMAGE_NAME
+            docker build -t $DOCKER_IMAGE_NAME .
       - run:
           name: Pusher Docker image
           command: |
@@ -92,13 +94,11 @@ commands:
           name: Setter miljøvariabler
           command: |
             echo "export COMMIT_SHORT='$(git rev-parse --short HEAD)'" >> $BASH_ENV
-            echo "export DOCKER_IMAGE_VERSION='echo $CIRCLE_BUILD_NUM-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
+            echo "export DOCKER_IMAGE_VERSION='$CIRCLE_BUILD_NUM-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
       - run:
-          name: Definerer docker-image
-          command: echo "export DOCKER_IMAGE_NAME='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$DOCKER_IMAGE_VERSION'" >> $BASH_ENV
-      - run:
-          name: Hva er navnet på docker imaget?
-          command: echo $DOCKER_IMAGE_NAME
+          name: Definerer navn på docker-image
+          command: |
+            echo "export DOCKER_IMAGE_NAME='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$DOCKER_IMAGE_VERSION'" >> $BASH_ENV
 
 workflows:
   bygg-og-deploy:
