--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ commands:
           name: Setter miljøvariabler
           command: |
             echo "export COMMIT_SHORT='$(git rev-parse --short HEAD)'" >> $BASH_ENV
-            echo "export DOCKER_IMAGE_VERSION='$CIRCLE_BUILD_NUM-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
+            echo "export DOCKER_IMAGE_VERSION='$CIRCLE_WORKFLOW_ID-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
       - run:
           name: Definerer navn på docker-image
           command: |
